@@ -1,3 +1,4 @@
+24-jun-2009 - adelikat - win32 - Hex Editor - Drag & Drop for .tbl files
 24-jun-2009 - adelikat - win32 - Drag & Drop for .fcm, it converts and then loads the converted movie automatically
 24-jun-2009 - adelikat - win32 - Drag & Drop support for palette files
 23-jun-2009 - adelikat - win32 - Drag & Drop support for savestates
